# desafio_triggo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .env.example  dbc_processor.py  request_files.py  spark_pipelines.py
