[project]
name = "desafio-triggo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.5",
    "datasus-dbc>=0.1.3",
    "dbc-to-dbf>=1.0.1",
    "dbfread>=2.0.7",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pysus>=1.0.0",
    "simpledbf>=0.2.6",
]
